cabal-version:      2.4
name:               essence
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             陈赢鹏
maintainer:         vincenteof@qq.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
    build-depends:      base ^>=4.14.3.0
    default-language:   Haskell2010
    ghc-options:        -fllvm


library
    import:             shared-properties
    exposed-modules:    ListTricks
    hs-source-dirs:     src

executable essence
    import:             shared-properties
    main-is:            Main.hs
    build-depends:      essence 
    hs-source-dirs:     app
