cabal-version:      2.4
name:               essence
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             陈赢鹏
maintainer:         vincenteof@qq.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
    build-depends:      base ^>=4.14.3.0,
                        containers >= 0.4.0.0
    ghc-options:        -Wall
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
                        -Wcompat
                        -Widentities
                        -Wredundant-constraints
                        -Wpartial-fields
                        -fhide-source-paths
                        -freverse-errors
                        -- this option is for M1
                        -- -fllvm 
    if impl(ghc >= 8.8.1)
    ghc-options:        -Wmissing-deriving-strategies
                        -Werror=missing-deriving-strategies
    default-language:   Haskell2010

library
    import:             shared-properties
    hs-source-dirs:     src
    exposed-modules:    Essence
                            Essence.NinetyNine
                                Essence.NinetyNine.Lists
                            Essence.LeetCode
                                Essence.LeetCode.Fundamentals
                                    Essence.LeetCode.Fundamentals.TwoSum
executable essence
    import:             shared-properties
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      essence 
